Apagando trechos não necessários

--- a/U1T3/trabalho3.ipynb
+++ b/U1T3/trabalho3.ipynb
@@ -422,7 +422,7 @@
         "id": "CFv9LvWTBvjo"
       },
       "source": [
-        "Show how much linez do we have after filtrate data"
+        "Show how much lines do we have after filtrate data"
       ]
     },
     {
@@ -665,6 +665,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wVL_m6-9KgJh"
+      },
+      "source": [
+        "A positive degree assortativity indicates that nodes with high degree tend to connect to other nodes with high degree. In this context, it suggests that if an active principle is connected to many medications (high degree), then it is more likely to be connected to other medications with many active principles. It implies that principles associated with complex medications tend to be found in other complex medications as well.\n",
+        "\n",
+        "A negative degree assortativity indicates that nodes with high degree tend to connect to nodes with low degree. In this context, it suggests that if an active principle is connected to many medications, it is more likely to be connected to medications with fewer active principles. It implies that principles associated with complex medications are more likely to be found in less complex medications."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 48,
       "metadata": {
@@ -726,57 +737,6 @@
         "plt.title(\"Subgraph of the Top 5 Medicines and Active Ingredients\")\n",
         "plt.show()\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wXwkhuVpEDP2",
-        "outputId": "78027956-5121-40a3-c51e-2709f6a5e980"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Degree assortativity for the bipartite graph: -0.29234234678913523\n"
-          ]
-        }
-      ],
-      "source": [
-        "# prompt: Nós (vértices): Medicamentos e princípios ativos são nós distintos. Arestas (Edges): Uma aresta conecta um medicamento aos seus princípios ativos. Assortatividade: Calcular a assortatividade por grau dentro do grafo bipartido para determinar se os princípios ativos que se conectam a medicamentos complexos (com muitos princípios ativos) tendem a se conectar a medicamentos com complexidade semelhant\n",
-        "\n",
-        "# Create a bipartite graph\n",
-        "graph_bipartite = nx.Graph()\n",
-        "\n",
-        "# Add nodes for medications and active principles\n",
-        "graph_bipartite.add_nodes_from(medication_principles.keys(), bipartite=0)  # Medications\n",
-        "graph_bipartite.add_nodes_from(set([principle for principles in medication_principles.values() for principle in principles]), bipartite=1)  # Active principles\n",
-        "\n",
-        "# Add edges between medications and their active principles\n",
-        "for medication, principles in medication_principles.items():\n",
-        "    for principle in principles:\n",
-        "        graph_bipartite.add_edge(medication, principle)\n",
-        "\n",
-        "# Calculate degree assortativity for the bipartite graph\n",
-        "degree_assortativity = nx.degree_assortativity_coefficient(graph_bipartite)\n",
-        "\n",
-        "print(f\"Degree assortativity for the bipartite graph: {degree_assortativity}\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "wVL_m6-9KgJh"
-      },
-      "source": [
-        "A positive degree assortativity indicates that nodes with high degree tend to connect to other nodes with high degree. In this context, it suggests that if an active principle is connected to many medications (high degree), then it is more likely to be connected to other medications with many active principles. It implies that principles associated with complex medications tend to be found in other complex medications as well.\n",
-        "\n",
-        "A negative degree assortativity indicates that nodes with high degree tend to connect to nodes with low degree. In this context, it suggests that if an active principle is connected to many medications, it is more likely to be connected to medications with fewer active principles. It implies that principles associated with complex medications are more likely to be found in less complex medications."
       ]
     },
     {
@@ -910,7 +870,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZAKuqLozftls1JkViuE5y",
+      "authorship_tag": "ABX9TyOSQBI+o84TFYshYMFLJa+O",
       "include_colab_link": true
     },
     "kernelspec": {
