--- a/U1T3/trabalho3.ipynb
+++ b/U1T3/trabalho3.ipynb
@@ -578,21 +578,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rWuDGOpTG61F",
-        "outputId": "f4d91462-6c6b-44ed-ff81-1503c1e44cbb"
+        "outputId": "14b580dc-bec3-443c-bb59-f3db0f1e90b0"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Número de nós: 7453\n",
-            "Número de arestas: 90718\n"
+            "Number of nodes: 7453\n",
+            "Number of edges: 90718\n"
           ]
         }
       ],
@@ -600,8 +600,8 @@
         "num_nodes = graph.number_of_nodes()\n",
         "num_edges = graph.number_of_edges()\n",
         "\n",
-        "print(f\"Número de nós: {num_nodes}\")\n",
-        "print(f\"Número de arestas: {num_edges}\")\n"
+        "print(f\"Number of nodes: {num_nodes}\")\n",
+        "print(f\"Number of edges: {num_edges}\")"
       ]
     },
     {
@@ -870,7 +870,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSQBI+o84TFYshYMFLJa+O",
+      "authorship_tag": "ABX9TyPAlGNoD0nSohPENJzbAlGP",
       "include_colab_link": true
     },
     "kernelspec": {
