--- a/U1T3/trabalho3.ipynb
+++ b/U1T3/trabalho3.ipynb
@@ -422,33 +422,32 @@
         "id": "CFv9LvWTBvjo"
       },
       "source": [
-        "Show how much lines do we have after filtrate data"
+        "Show how much lines do we have before and after filtrate data"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pK9CNNE8B2j-",
-        "outputId": "0cfedc0b-60af-4df2-8081-be626888ea9c"
+        "outputId": "7c771aab-9c33-4adf-dcd1-48e0f9e6045b"
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "10768"
-            ]
-          },
-          "execution_count": 10,
-          "metadata": {},
-          "output_type": "execute_result"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "before: 31379\n",
+            "after: 10768\n"
+          ]
         }
       ],
       "source": [
-        "len(df_cleaned)"
+        "print(\"before:\", len(df))\n",
+        "print(\"after:\", len(df_cleaned))"
       ]
     },
     {
@@ -870,7 +869,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPAlGNoD0nSohPENJzbAlGP",
+      "authorship_tag": "ABX9TyPVxUEoJ5ORvOb2xs16Fy81",
       "include_colab_link": true
     },
     "kernelspec": {
